--- a/style.css
+++ b/style.css
@@ -1,4 +1,11 @@
 body{
-    background-color: blueviolet;
+    background-color: #0000ff;
+
+}
+div{
+    width: 100px;
+    height: 100px;
+    border: solid 2px black;
+    background-color: #00000028;
 
 }
